--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head><title>Test</title></head>
 	<body bgcolor=Skyblue>
-		<h1>Test Git</h1>
+		<h1>Test Git in AMI Linux</h1>
 	</body>
 </html>
 
